# criticality_monitor

./: .gitignore  .gitmodules  City.py  Dockerfile  Dockerfile.ipad  Mass.py  README.md  cm_getting_started.ipynb  cm_logger.ipynb  cm_sorting_v3.ipynb  cml.ipynb  cml_NEWNEW.ipynb  cml_functions.ipynb  critical_length_dijstra.py  docker-compose.yml  entrypoint.sh  hamburg_clusters_with_path_angle.html  nginx.conf  pyproject.toml  requirements.txt  test_mplleaflet.ipynb  test_osrm.ipynb
cm_modular/: __init__.py  cities.py  clustering.py  filtering.py  geo.py  graphing.py  io.py  location_logger.py  mapping.py  pipeline.py  plotting.py  routing.py  website_data.py  website_templates.py  website_utils.py
criticality_monitor.egg-info/: PKG-INFO
deployment/: .env.example  Dockerfile  README.md  docker-compose.yml  healthcheck.py  manage.bat  manage.sh  nginx.conf
ipad_rendering/: render_and_wrap.py
mplleaflet_custom/: __init__.py  _display.py
old scripts/: cm_lezama_algorithm.ipynb  cm_presorting.ipynb  cm_sorting_v2.ipynb  old.ipynb
scripts/: anonymize_and_jitter_json.py  automated_logger.py  batch_build.py  build_city_site.py  build_enhanced_site.py  build_map.py  build_site.py  convert_to_database.py  data_visualizer.py  ipad_render.py  logger.py  monitor_services.py  plot_metrics.py  run_batch.py  run_batch_and_create_site.py  run_single.py  visualize_json.py  watch_and_build_site.py  watch_and_process.py
test_reload/: README.md  index-reload.html  index.html
tests/: CONTRACTS.md  test_clustering.py  test_filtering.py  test_geo.py  test_graph.py  (+4 more)
(+5 files in other folders)
